--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -20,10 +20,10 @@ jobs:
 
       - name: Build Android ARM64
         run: |
-          export GOOS=android
+          export GOOS=linux
           export GOARCH=arm64
-          export CGO_ENABLED=1
-          go build -o deeplx-android-arm64
+          export CGO_ENABLED=%
+          go build -o deeplx-linux-arm64
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
