--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -1,4 +1,4 @@
-name: Build DeepLX Android ARM64
+name: Build DeepLX ARM64 (Termux)
 
 on:
   workflow_dispatch:
@@ -18,15 +18,15 @@ jobs:
         with:
           go-version: '1.24.2'
 
-      - name: Build Android ARM64
+      - name: Build Linux ARM64
         run: |
           export GOOS=linux
           export GOARCH=arm64
-          export CGO_ENABLED=%
+          export CGO_ENABLED=0
           go build -o deeplx-linux-arm64
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: deeplx-android-arm64
-          path: deeplx-android-arm64
+          name: deeplx-linux-arm64
+          path: deeplx-linux-arm64
