--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -18,12 +18,15 @@ jobs:
         with:
           go-version: '1.24.2'
 
-      - name: Build Linux ARM64
+      - name: Build Linux ARM64 with CGO
         run: |
-          export GOOS=linux
-          export GOARCH=arm64
-          export CGO_ENABLED=0
-          go build -o deeplx-linux-arm64
+         sudo apt-get update
+         sudo apt-get install -y gcc-aarch64-linux-gnu
+         export CC=aarch64-linux-gnu-gcc
+         export GOOS=linux
+         export GOARCH=arm64
+         export CGO_ENABLED=1
+         go build -o deeplx-linux-arm64
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
